--- a/src/themes/calypso/styles/_variables.scss
+++ b/src/themes/calypso/styles/_variables.scss
@@ -20,8 +20,9 @@ $autreblue: #00407F !default;
 $lightblue: #CCE2F3;
 $extralightblue: #E5F0F8;
 
-$secondary: #6BA5D1 !default;
+$secondaryblue: #4998d3 !default;
 $darkblue: #0b113a !default;
+$hoverdarkblue: #0c144d !default;
 
 $redorange: #f04e24;
 $rose: #fee1de;
