--- a/src/themes/calypso/app/home-page/top-level-community-list/top-level-community-list.component.html
+++ b/src/themes/calypso/app/home-page/top-level-community-list/top-level-community-list.component.html
@@ -1,4 +1,4 @@
-<div class="container-bib">
+<div class="container-bib mt-5">
   <div class="card-group vgr-cards">
     <ng-container *ngIf="communitiesRD$ | async as communitiesRD">
       <ng-container *ngIf="communitiesRD?.hasSucceeded">
@@ -8,16 +8,16 @@
           <ng-container *ngIf="collections$ | async as collections; else loadingContent">
             <ng-container *ngIf="collections.length > 0">
               <ng-container *ngFor="let collection of collections">
-              <div class="card" *ngIf="collection?.vedette">
-                <div class="card-img-body" >
-                  <img class="card-img" [src]="collection.vedette"  alt="Item {{ community._name }}">
+                <div class="card" *ngIf="collection?.vedette">
+                  <div class="card-img-body" >
+                    <img class="card-img" [src]="collection.vedette"  alt="Item {{ community._name }}">
+                  </div>
+                  <div class="card-body">
+                    <h4 class="card-title mt-5">{{collection.title}}</h4>
+                    <p class="card-text ml-2">{{collection.description}}</p>
+                    <a [routerLink]="['/collections/', collection.id]" class="btn btn-darkblue ml-2">{{ 'calypso.collection.decouvrir' | translate }}</a>
+                  </div>
                 </div>
-                <div class="card-body">
-                  <h4 class="card-title">{{collection.title}}</h4>
-                  <p class="card-text">{{collection.description}}</p>
-                  <a [routerLink]="['/collections/', collection.id]" class="btn btn-outline-primary">Voir plus</a>
-                </div>
-              </div>
               </ng-container>
             </ng-container>
           </ng-container>
