--- a/src/themes/collspec/app/collection-page/vedette-coll-liste/vedette-coll-liste.component.html
+++ b/src/themes/collspec/app/collection-page/vedette-coll-liste/vedette-coll-liste.component.html
@@ -1,14 +1,13 @@
 <ng-container *ngIf="images$ | async as images">
-  <div *ngIf="images[0]"  class="container">
-     <h3>Notre vedette de la collection</h3>
-  <div class="vedette-col">
-    <div class="vedetteCollImage">
-      <img [src]="images[0].imageUrl" alt="{{ images[0].title }}">
-    </div>
-    <div class="info">
-      <h3 class="vedette-title outer"><span class="inner"> {{ images[0].title }} </span></h3>
+  <div *ngIf="images[0]" class="hero-banner" [ngStyle]="{ 'background-image': 'url(' + images[0].imageUrl + ')' }">
+    <div class="hero-overlay">
+      <div class="hero-content container">
+        <!--<h2 class="hero-title">{{ images[0].title }}</h2>-->
+        <!--<p class="hero-text">
+          {{ images[0].description }}
+        </p>-->
+      </div>
     </div>
   </div>
-  </div>
-  <ds-loading *ngIf="!(images.length > 0)" message="Loading ..."></ds-loading>
+  <ds-loading *ngIf="!(images.length > 0)" message="Loading..."></ds-loading>
 </ng-container>
