--- a/src/themes/collspec/app/home-page/vedette-liste/vedette-liste.component.scss
+++ b/src/themes/collspec/app/home-page/vedette-liste/vedette-liste.component.scss
@@ -61,25 +61,23 @@
       flex: 0 0 25%;
       opacity: 0.5;
       transition: transform 0.8s ease, opacity 0.8s ease, scale 0.8s ease;
-      transform: scale(0.95);
       position: relative;
       z-index: 1;
       visibility: hidden;
       will-change: transform, opacity;
 
       &.active {
-        flex: 0 0 70%;
-        transform: scale(1);
+        flex: 0 0 75%;
         opacity: 1;
         z-index: 3;
         visibility: visible;
+        pointer-events: auto;
       }
 
       &.active + .carousel-item {
         visibility: visible;
         z-index: 2;
-        flex: 0 0 70%;
-        opacity: 1;
+        flex: 0 0 75%;
         pointer-events: auto;
       }
 
