--- a/src/themes/collspec/styles/_global-styles.scss
+++ b/src/themes/collspec/styles/_global-styles.scss
@@ -38,11 +38,11 @@ h1, h2, h3, h5, h6 {
 
 h4 {
   font-family: Lora;
+  font-weight: 600;
 }
 
 h2{
-  font-size: 46px;
-  font-weight: 600;
+  font-size: 2.5rem;
 }
 
 a {
@@ -70,6 +70,15 @@ a.lead:hover {
 nav#admin-sidebar a {
   color: $extralightblue!important;
   text-decoration: none!important;
+}
+
+
+.facet-filter{
+  padding: 10px !important;
+
+  .h4{
+    font-size: 1rem;
+  }
 }
 
 /* -------------------------------------------------------
@@ -105,7 +114,7 @@ p, span, a {
 }
 
 .img-radius-bib {
-  border-radius: 12px!important;
+  border-radius: 1rem!important;
 }
 
 /* -------------------------------------------------------
@@ -310,7 +319,7 @@ p, span, a {
   padding-bottom: 20px;
   position: relative;
   margin: 20px 10%;
-  border-radius: 20px;
+  border-radius: 1rem;
   background: white;
   z-index: 10 !important;
 }
@@ -397,7 +406,7 @@ a.collspec-menu {
   width: 75% !important;
   height: 50px !important;
   background: transparent !important;
-  border-radius: 20px 0 0 20px !important;
+  border-radius: 1rem 0 0 1rem !important;
 }
 
 .hero-section .hero-overlay ds-base-search-form form .input-group .btn-primary {
@@ -441,7 +450,7 @@ a.collspec-menu {
 .hero-overlay {
   background: rgba(0, 0, 0, 0.2);
   padding: 3rem;
-  border-radius: 10px;
+  border-radius: 1rem;
   color: white;
   width: 100%;
   height: 90vh;
