--- a/src/themes/collspec/app/item-page/simple/item-types/untyped-item/untyped-item.component.scss
+++ b/src/themes/collspec/app/item-page/simple/item-types/untyped-item/untyped-item.component.scss
@@ -24,7 +24,7 @@
   .nav-link.active {
     animation: md-tab-ripple 0.2s linear forwards;
     background-color: white;
-    border-bottom: solid 1px #dc4a1e;
+    border-bottom: solid 1px #f04e24;
     color: #334652;
   }
 }
