--- a/src/themes/collspec/app/shared/search/search-results/search-results.component.html
+++ b/src/themes/collspec/app/shared/search/search-results/search-results.component.html
@@ -21,7 +21,7 @@
 <!-- Ajout de votre code personnalisé ici -->
 <div class="align-items-end">
   <!-- Icon made by Pixel perfect from www.flaticon.com -->
-  <img src="/assets/collspec/images/ai.png" alt="Clip recherche Calypso" title="Rechercher avec CLIP " class="collspec-img-ia" (click)="redirectToAiSearch()">
+  <!--<img src="/assets/collspec/images/ai.png" alt="Clip recherche Calypso" title="Rechercher avec CLIP " class="collspec-img-ia" (click)="redirectToAiSearch()">-->
 </div>
 
 @if (searchResults && searchResults?.hasSucceeded && !searchResults?.isLoading && searchResults?.payload?.page.length > 0) {
