--- a/src/themes/collspec/app/collection-page/vedette-coll-liste/vedette-coll-liste.component.html
+++ b/src/themes/collspec/app/collection-page/vedette-coll-liste/vedette-coll-liste.component.html
@@ -2,7 +2,8 @@
   <div *ngIf="images[0]" class="hero-banner" [ngStyle]="{ 'background-image': 'url(' + images[0].imageUrl + ')' }">
     <div class="hero-overlay">
       <div class="hero-content container">
-        <!--<h2 class="hero-title">{{ images[0].title }}</h2>-->
+        <h2 class="hero-title">{{ images[0].title }}</h2>
+        <a  class="btn btn-bib-white" href="/items/{{images[0].id }}">{{'collspec.voir.plus' | translate}}</a>
         <!--<p class="hero-text">
           {{ images[0].description }}
         </p>-->
