--- a/src/themes/collspec/app/home-page/vedette-liste/vedette-liste.component.scss
+++ b/src/themes/collspec/app/home-page/vedette-liste/vedette-liste.component.scss
@@ -98,7 +98,7 @@
     .carousel-item-prev {
       display: block;
       opacity: 0.7;
-      transition: transform 0.8s ease, opacity 0.8s ease;
+      transition: transform 0.8s ease, opacity 0.8s ease, scale 0.8s ease;
     }
 
     .carousel-item-next:not(.carousel-item-start),
