--- a/src/themes/collspec/styles/_global-styles.scss
+++ b/src/themes/collspec/styles/_global-styles.scss
@@ -95,6 +95,36 @@ p, span, a {
   border-radius: 60px;
 }
 
+.btn-bib-white {
+  background: transparent;
+  border: solid 1px $extralightblue!important;
+  color:$extralightblue!important;
+  font-size: 13px;
+  position: relative;
+  padding-right: 2rem;
+  font-family: $font-family-serif;
+}
+
+.btn-bib-white:hover {
+    border: solid 1px white;
+    &::after {
+      content: '➝';
+      position: absolute;
+      opacity: 0;
+      right: 1rem;
+      transition: opacity 0.3s, right 0.3s;
+    }
+
+    &:hover {
+      padding-right: 2.5rem;
+      color: #FFFFFF!important;
+
+      &::after {
+        opacity: 1;
+        right: 0.5rem;
+      }
+    }
+}
 .bg-footer-dark {
   background-color: #040616;
 }
@@ -454,6 +484,16 @@ a.collspec-menu {
   color: white;
   width: 100%;
   height: 90vh;
+}
+
+
+.bib-coll-titre ds-comcol-page-header h1 {
+  margin-top: 20%;
+}
+
+.bib-coll-titre ds-base-comcol-page-handle  p {
+  font-size: 13px;
+  font-weight: bold;
 }
 
 // ============================
