Affichage de 4 collection par default sur la page d'accueil et ajout d'une fonction pour charger plus. Corrections minieurs sur le style.

--- a/src/themes/collspec/app/collection-page/vedette-coll-liste/vedette-coll-liste.component.html
+++ b/src/themes/collspec/app/collection-page/vedette-coll-liste/vedette-coll-liste.component.html
@@ -2,8 +2,9 @@
   <div *ngIf="images[0]" class="hero-banner" [ngStyle]="{ 'background-image': 'url(' + images[0].imageUrl + ')' }">
     <div class="hero-overlay">
       <div class="hero-content container">
-        <h2 class="hero-title">{{ images[0].title }}</h2>
-        <a  class="btn btn-bib-white" href="/items/{{images[0].id }}">{{'collspec.voir.plus' | translate}}</a>
+        <a  class="link" href="/items/{{images[0].id }}">
+          <h2 class="hero-title">{{ images[0].title }}</h2>
+        </a>
         <!--<p class="hero-text">
           {{ images[0].description }}
         </p>-->
