--- a/src/themes/collspec/app/home-page/top-level-community-list/top-level-community-list.component.html
+++ b/src/themes/collspec/app/home-page/top-level-community-list/top-level-community-list.component.html
@@ -2,30 +2,34 @@
   <div class="card-group vgr-cards">
     <ng-container *ngIf="communitiesRD$ | async as communitiesRD">
       <ng-container *ngIf="communitiesRD?.hasSucceeded">
-        <!-- Boucle sur chaque communauté -->
-        <ng-container *ngFor="let community of communitiesRD?.payload?.page; let i = index">
-          <!-- Récupérer les collections à partir du lien -->
-          <ng-container *ngIf="collections$ | async as collections; else loadingContent">
-            <ng-container *ngIf="collections.length > 0">
-              <ng-container *ngFor="let collection of collections">
-                <div class="card" *ngIf="collection?.vedette">
-                  <div class="card-img-body" >
-                    <img class="card-img" [src]="collection.vedette"  alt="Item {{ community._name }}">
-                  </div>
-                  <div class="card-body">
-                    <h4 class="card-title mt-5">{{collection.title}}</h4>
-                    <p class="card-text ml-2">{{collection.description}}</p>
-                    <a [routerLink]="['/collections/', collection.id]" class="btn btn-darkblue ml-2">{{ 'collspec.collection.decouvrir' | translate }}</a>
-                  </div>
-                </div>
-              </ng-container>
-            </ng-container>
+        <!-- Affichage des collections -->
+        <ng-container *ngIf="displayedCollections.length > 0; else loadingContent">
+          <ng-container *ngFor="let collection of displayedCollections">
+            <div class="card" *ngIf="collection?.vedette">
+              <div class="card-img-body">
+                <img class="card-img" [src]="collection.vedette" alt="Item {{ collection.title }}">
+              </div>
+              <div class="card-body">
+                <h4 class="card-title mt-5 text-start">{{ collection.title }}</h4>
+                <p class="card-text ml-2">{{ collection.description }}</p>
+                <a [routerLink]="['/collections/', collection.id]" class="btn btn-darkblue ml-2">
+                  {{ 'collspec.collection.decouvrir' | translate }}
+                </a>
+              </div>
+            </div>
           </ng-container>
+
+          <!-- Bouton charger plus -->
+          <div class="text-center mt-3" *ngIf="displayedCollections.length < allCollections.length">
+            <button class="btn btn-outline-primary" (click)="loadMore()">{{'item.edit.bitstreams.bundle.load.more' | translate}}</button>
+          </div>
         </ng-container>
       </ng-container>
+
       <ng-template #loadingContent>
         <ds-loading message="{{ 'loading.top-level-communities' | translate }}"></ds-loading>
       </ng-template>
+
       <ds-error *ngIf="communitiesRD?.hasFailed" message="{{ 'error.top-level-communities' | translate }}"></ds-error>
     </ng-container>
   </div>
