--- a/src/themes/collspec/styles/_variables.scss
+++ b/src/themes/collspec/styles/_variables.scss
@@ -1,4 +1,5 @@
-// _variables.scss
+// import _variables.scss de Base
+@import '../../../styles/_variables.scss';
 // Import the custom fonts
 @import 'https://fonts.googleapis.com/css2?family=Figtree:wght@400;600&display=swap';
 @import 'https://fonts.googleapis.com/css2?family=Lora:wght@400;600&display=swap';
