--- a/src/themes/collspec/styles/_global-styles.scss
+++ b/src/themes/collspec/styles/_global-styles.scss
@@ -88,6 +88,12 @@ p, span, a {
   font-family: Figtree!important;
 }
 
+
+.loginLink{
+  font-size: 14px;
+}
+
+
 // -------------------------------------------------------
 // Button Styles
 // -------------------------------------------------------
@@ -489,6 +495,7 @@ a.collspec-menu {
 
 .bib-coll-titre ds-comcol-page-header h1 {
   margin-top: 20%;
+  width: 75vw;
 }
 
 .bib-coll-titre ds-base-comcol-page-handle  p {
@@ -593,18 +600,27 @@ a.collspec-menu {
 
 }
 
+.fa-bars::before,
+.fa-navicon::before {
+  font-family: 'Font Awesome 6 Free', serif; // ou 'FontAwesome' selon la version chargée
+  font-weight: 900;
+  content: "\f0c9";
+}
+
+
 
 // ============================
 // Ajustements responsifs
 // ============================
 @media (max-width: 768px) {
   .hero-section {
-    height: 50vh;
+    height: 45vh;
   }
 
   .hero-overlay {
-    height: 50vh;
-    margin-top: -100%;
+    height: 70vh;
+    margin-top: -50%;
+    border-radius: 0;
   }
 
   .search-bar {
@@ -617,9 +633,19 @@ a.collspec-menu {
   }
 
   .hero-section h1 {
-    font-size: 60px;
+    font-size: 56px;
     margin-top: 70%;
     margin-left: 0;
+  }
+
+  .carousel-control-prev{
+    top: 95vh!important;
+    margin-left: 15%!important;
+  }
+
+  .carousel-control-next{
+    top: 95vh!important;
+    margin-right: 15%!important;
   }
 
   .hero-section .hero-overlay ds-base-search-form form .input-group .form-control {
@@ -635,6 +661,31 @@ a.collspec-menu {
 
   .hero-section .hero-overlay ds-base-search-form form .input-group .form-control {
     flex: none;
-    width: 50% !important;
+    width: 40% !important;
+  }
+
+  // Correction pour afficher le menu sur les petites ecrans
+  #mobile-navbar-wrapper{
+    overflow: visible!important;
+  }
+
+  .navbar.open{
+    width: 90vw!important;
+    min-height: 60vh!important;
+  }
+
+  #header-logo{
+    width: 70%!important;
+    height: auto!important;
+    margin-left: 5%!important;
+  }
+
+  .hero-section .hero-overlay ds-base-search-form form .input-group  {
+    width: 150% !important;
+    margin-left: 0;
+  }
+
+  .hero-banner .hero-overlay{
+    top: 22vh;
   }
 }
