--- a/src/themes/collspec/styles/_variables.scss
+++ b/src/themes/collspec/styles/_variables.scss
@@ -20,6 +20,7 @@ $fondbase: #0b113a !default;
 $autreblue: #00407F !default;
 $lightblue: #CCE2F3;
 $extralightblue: #E5F0F8;
+$gray: #717171;
 
 $secondaryblue: #4998d3 !default;
 $darkblue: #0b113a !default;
