--- a/src/themes/collspec/app/collection-page/collection-page.component.html
+++ b/src/themes/collspec/app/collection-page/collection-page.component.html
@@ -7,36 +7,26 @@
     <div>
       <div class="d-flex flex-row border-bottom mb-4 pb-4">
         <header class="comcol-header me-auto">
+            <!-- Collection Name -->
+            <ds-comcol-page-header
+              [name]="dsoNameService.getName(collection)">
+            </ds-comcol-page-header>
+            <!-- Handle -->
+            <ds-comcol-page-handle
+              [content]="collection.handle"
+              [title]="'collection.page.handle'">
+            </ds-comcol-page-handle>
 
-          <div class="row">
-            <div class="col-md-4">
-              <div class="row bib-coll-titre">
-                <!-- Collection Name -->
-                <ds-comcol-page-header
-                  [name]="dsoNameService.getName(collection)">
-                </ds-comcol-page-header>
-                <!-- Handle -->
-                <ds-comcol-page-handle
-                  [content]="collection.handle"
-                  [title]="'collection.page.handle'">
-                </ds-comcol-page-handle>
-              </div>
-              <div class="row">
-                <!-- Introductory text -->
-                <ds-comcol-page-content
-                  [content]="collection.introductoryText"
-                  [hasInnerHtml]="true">
-                </ds-comcol-page-content>
-              </div>
-            </div>
-            <div class="col-md-8">
-              <div class="row">
-                <!-- Image vedette de la collection -->
-                <ds-vedette-coll-liste></ds-vedette-coll-liste>
-                <!-- Fin image vedette -->
-              </div>
-            </div>
-          </div>
+            <!-- add Udem : Image vedette de la collection -->
+            <ds-vedette-uuid [uuid]="collection.uuid"></ds-vedette-uuid>
+            <!-- fin add Udem -->
+
+            <!-- Introductory text -->
+            <ds-comcol-page-content
+              [content]="collection.introductoryText"
+              [hasInnerHtml]="true">
+            </ds-comcol-page-content>
+
           <!-- Collection logo -->
           <!--@if (logoRD$) {
           <ds-comcol-page-logo
