--- a/src/themes/collspec/app/footer/footer.component.html
+++ b/src/themes/collspec/app/footer/footer.component.html
@@ -1,11 +1,14 @@
 <footer  class="footer mt-2">
   <div class="container">
     <div class="row">
-      <div class="col-md-12">
+      <div class="col-md-8">
         <a  class="text-decoration-none" href="https://bib.umontreal.ca" target="_blank">
           <p class="text-title-bib">{{ 'collspec.footer.bibliotheque' | translate }}</p>
         </a>
       </div>
+      <!--<div class="col-md-4">
+        <ds-auth-nav-menu></ds-auth-nav-menu>
+      </div>-->
       <div class="col-md-5 col-sm-4 border-r mt-3 mb-5">
         <h5 class="text-lightblue">{{ 'collspec.footer.infos.a_propos' | translate }}</h5>
         <p class="text-gray ml-2">
@@ -44,6 +47,11 @@
         </div>
         <div class="col-md-6 col-sm-6 text-sm-left ">
           <ul  class="terms-privacy d-flex justify-content-sm-end  list-unstyled mt-3">
+            <li class="ml-2">
+
+              <a href="/login" target="_blank" class="link-footer"> {{ 'login.form.submit' | translate }}</a>
+            </li>
+            <li class="ml-2"> | </li>
             <li class="ml-2">
                 <a href="https://vie-privee.umontreal.ca/confidentialite/" target="_blank" class="link-footer"> {{ 'collspec.footer.liens.confidentialite' | translate }}</a>
             </li>
