--- a/src/themes/collspec/app/home-page/top-level-community-list/top-level-community-list.component.scss
+++ b/src/themes/collspec/app/home-page/top-level-community-list/top-level-community-list.component.scss
@@ -11,7 +11,7 @@
     flex-flow: wrap;
     flex: 100%;
     margin-bottom: 40px;
-    min-height: 30vh;
+    min-height: 50vh;
 
     &:nth-child(even) .card-img-body {
       order: 2;
@@ -35,7 +35,7 @@
 
     @media (max-width: 576px) {
       width: 100%;
-      height: 200px;
+      height: auto;
       margin-bottom: 20px;
     }
 
