--- a/src/themes/collspec/styles/_global-styles.scss
+++ b/src/themes/collspec/styles/_global-styles.scss
@@ -389,6 +389,10 @@ p, span, a {
   z-index: 10 !important;
 }
 
+#header-logo{
+  width: 75%!important;
+}
+
 /* Lien du menu Calypso */
 a.collspec-menu {
   color: $autreblue !important;
