--- a/src/themes/collspec/app/vedette/vedette-liste/vedette-liste.component.html
+++ b/src/themes/collspec/app/vedette/vedette-liste/vedette-liste.component.html
@@ -1,5 +1,5 @@
 <div class="carousel-bib-home">
-  <div class="container-fluid">
+  <div class="container-fluid font-blue">
     @if (loading) {
     <!-- Affichage du composant de chargement -->
     <ds-loading message="Loading..."></ds-loading>
