--- a/src/themes/collspec/app/vedette/vedette-liste/vedette-liste.component.scss
+++ b/src/themes/collspec/app/vedette/vedette-liste/vedette-liste.component.scss
@@ -10,6 +10,8 @@
 .bib-title {
   font-weight: 500;
   font-family: $font-family-serif;
+  font-variant-numeric: lining-nums tabular-nums;
+  font-feature-settings: 'liga' off, 'clig' off;
   margin-bottom: 1rem;
   color: $darkblue!important;
   text-align: left;
@@ -22,9 +24,17 @@
 }
 
 p {
-  font-size: 1rem;
   text-align: left;
   margin-left: 20%;
+  padding-right: 10%;
+  color: $colltitre;
+  font-variant-numeric: lining-nums tabular-nums;
+  font-feature-settings: 'liga' off, 'clig' off;
+  font-family: $font-family-sans-serif;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 150%; /* 21px */
 }
 
 .slider {
